--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -10,7 +10,7 @@
        - uses: jasineri/gitartwork@v1
          with:
             # Use this username's contribution graph  
-            user_name: jasineri
+            user_name: vaibhavpal7549
             # Text on contribution graph 
-            text: JASINERI
+            text: VAIBHAV
        - uses: jasineri/simple-push-action@v1
